--- a/src/client/Client/Pages/Locks/MyTokenClaimsPage.razor
+++ b/src/client/Client/Pages/Locks/MyTokenClaimsPage.razor
@@ -5,12 +5,12 @@
 <MudContainer MaxWidth="MaxWidth.False">
     <div class="d-flex">
         <MudHidden Breakpoint="Breakpoint.SmAndUp">
-            <MudText Class="mr-2 align-self-center" Typo="Typo.h5" GutterBottom="false">My Token Claims</MudText>
-            <MudIconButton Class="align-self-center" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
+            <MudText Class="mr-2 align-self-center" Typo="Typo.h5" GutterBottom="false">My Claims</MudText>
+            <MudIconButton Class="align-self-center mx-1" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
         </MudHidden>
         <MudHidden Breakpoint="Breakpoint.Xs">
-            <MudText Class="mr-4 align-self-center" Typo="Typo.h4" GutterBottom="false">My Token Claims</MudText>
-            <MudIconButton Class="align-self-center" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
+            <MudText Class="mr-4 align-self-center" Typo="Typo.h4" GutterBottom="false">My Claims</MudText>
+            <MudIconButton Class="align-self-center mx-1" Icon="@Icons.Material.Filled.Refresh" Color="Color.Primary" Variant="Variant.Filled" Size="Size.Small" />
         </MudHidden>
     </div>
 </MudContainer>
@@ -23,8 +23,52 @@
     else
     {
         <MudPaper Square="true" Elevation="10" Class="grey darken-4">
-
-        </MudPaper>
+            <MudTable Items="@Locks" Class="mx-0 grey darken-4" FixedHeader="true">
+                <HeaderContent>
+                    <MudTh>Lock Index</MudTh>
+                    <MudTh>Initiator</MudTh>
+                    <MudTh>Receiver</MudTh>
+                    <MudTh>Date Unlock</MudTh>
+                    <MudTh>Locked Amount</MudTh>
+                    <MudTh>Status</MudTh>
+                    <MudTh>Actions</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    @if (@context.AssetToken == null)
+                    {
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                        <MudTd><MudSkeleton Height="20px" Width="90px" Animation="Animation.Wave" SkeletonType="SkeletonType.Rectangle" /></MudTd>
+                    }
+                    else
+                    {
+                        <MudTd DataLabel="Lock Index">@context.Transaction.LockIndex</MudTd>
+                        <MudTd DataLabel="Initiator">@context.Transaction.InitiatorAddress.ToMask(6)</MudTd>
+                        <MudTd DataLabel="Initiator">@context.Receiver.ReceiverAddress.ToMask(6)</MudTd>
+                        <MudTd DataLabel="Date Unlock">@context.Transaction.UnlockTime.ToCurrentTimeZone().ToFormat("MMMM dd, yyyy hh:mm tt")</MudTd>
+                        <MudTd DataLabel="Total Amount">
+                            <div class="d-flex">
+                                @context.Receiver.Amount.ToAmount(@context.AssetToken.Decimals).ToAmountDisplay(@context.AssetToken.Decimals) @context.AssetToken.Symbol
+                            </div>
+                        </MudTd>
+                        <MudTd DataLabel="Status">
+                            <MudChip Color="@context.StatusColor" Size="Size.Small">
+                                <b>@context.Status</b>
+                            </MudChip>
+                        </MudTd>
+                        <MudTd DataLabel="Actions">
+                            <MudMenu Variant="Variant.Filled" Color="Color.Primary" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" DisableElevation="true" Icon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary" Direction="Direction.Left" OffsetX="true">
+                                <MudMenuItem Disabled="@(!context.CanClaim)" OnClick="(() => InvokeClaimLockModalAsync(context))">Claim Lock</MudMenuItem>
+                            </MudMenu>
+                        </MudTd>
+                     }
+                </RowTemplate>
+        </MudTable>
+    </MudPaper>
     }
 
 </MudContainer>
