--- a/src/client/Client/Pages/Modals/ClaimLockModal.razor
+++ b/src/client/Client/Pages/Modals/ClaimLockModal.razor
@@ -7,7 +7,7 @@
                     <MudGrid Class="pt-0 pb-4" Spacing="2">
                         <MudItem xs="12">
                             <MudText Typo="Typo.body1" Class="text-white">
-                                <span>Are you sure you want to revoke the lock <b>#@((long)Model.LockIndex)</b>? Only unclaimed amounts will be refunded to you. This action is irrevocable.</span>
+                                <span>Are you sure you want to claim the lock <b>#@((long)Model.LockIndex)</b> as <b>@Model.ReceiverAddress</b>? This action is irrevocable.</span>
                             </MudText>
                         </MudItem>
                     </MudGrid>
@@ -22,7 +22,7 @@
                     }
                     else
                     {
-                        <span>REVOKE LOCK</span>
+                        <span>CLAIM LOCK</span>
                     }
                 </MudButton>
 
