--- a/src/client/Client/Pages/Locks/MyTokenRefundsPage.razor
+++ b/src/client/Client/Pages/Locks/MyTokenRefundsPage.razor
@@ -48,7 +48,7 @@
                         </MudTd>
                         <MudTd DataLabel="Total Amount">
                             <div class="d-flex">
-                                @context.AssetRefund.Amount.ToAmount(@context.AssetToken.Decimals).ToAmountDisplay(@context.AssetToken.Decimals) @context.AssetToken.Symbol
+                                @context.AmountDisplay
                             </div>
                         </MudTd>
                         <MudTd DataLabel="Actions">
