--- a/src/client/Client/Pages/Locks/MyLocksPage.razor
+++ b/src/client/Client/Pages/Locks/MyLocksPage.razor
@@ -66,7 +66,7 @@
                         </MudTd>
                         <MudTd DataLabel="Total Amount">
                             <div class="d-flex">
-                                @context.TotalAmount.ToAmount(@context.AssetToken.Decimals).ToAmountDisplay(@context.AssetToken.Decimals) @context.AssetToken.Symbol
+                                @context.TotalAmountDisplay
                             </div>
                         </MudTd>
                         <MudTd DataLabel="Status">
